[package]
name = "wgpu-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
winit = "0.27.2"
pollster = "0.2"
env_logger = "0.9"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.5"